tests/react_16_3/react_16_3.exp
Error ---------------------------------------------------------------------------------------------- forwardRef.js:11:13

Cannot create `FancyButton` element because property `foo` is missing in props [1] but exists in `Props` [2].
[prop-missing]

   forwardRef.js:11:13
   11| const _a = <FancyButton />; // Error, missing foo
                   ^^^^^^^^^^^

References:
   forwardRef.js:11:12
   11| const _a = <FancyButton />; // Error, missing foo
                  ^^^^^^^^^^^^^^^ [1]
   forwardRef.js:5:38
    5| const FancyButton = React.forwardRef<Props, HTMLButtonElement>((props, ref) => (
                                            ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:13:13

Cannot create `FancyButton` element because property `bar` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   forwardRef.js:13:13
   13| const _c = <FancyButton foo={3} bar={3} />; // Error bar, not allowed in exact props
                   ^^^^^^^^^^^

References:
   forwardRef.js:5:38
    5| const FancyButton = React.forwardRef<Props, HTMLButtonElement>((props, ref) => (
                                            ^^^^^ [1]
   forwardRef.js:13:12
   13| const _c = <FancyButton foo={3} bar={3} />; // Error bar, not allowed in exact props
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:19:38

Cannot create `FancyButton` element because in property `ref`: [incompatible-type]
 - Either `React.RefObject` [1] is incompatible with function type [2]. Non-callable objects are not compatible with
   functions.
 - Or `React.RefObject` [1] is incompatible with null [3].

   forwardRef.js:19:38
    19| const _e = <FancyButton foo={3} ref={badRef} />; // Incorrect ref type
                                             ^^^^^^

References:
   <BUILTINS>/react.js:611:8
   611|     ): React$RefObject<T | null>;
               ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:114:6
   114|   | ((T | null) => mixed)
             ^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:115:5
   115|   | null
            ^^^^ [3]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:22:38

Cannot create `FancyButton` element because in property `ref`: [incompatible-type]
 - Either `HTMLButtonElement` [1] is incompatible with `HTMLDivElement` [2] in the first parameter.
 - Or function [3] is incompatible with object type [4]. Functions without statics are not compatible with objects.

   forwardRef.js:22:38
    22| const _g = <FancyButton foo={3} ref={(x: null | HTMLDivElement) => x} />; // Incorrect ref type
                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]

References:
   forwardRef.js:5:45
     5| const FancyButton = React.forwardRef<Props, HTMLButtonElement>((props, ref) => (
                                                    ^^^^^^^^^^^^^^^^^ [1]
   forwardRef.js:22:49
    22| const _g = <FancyButton foo={3} ref={(x: null | HTMLDivElement) => x} />; // Incorrect ref type
                                                        ^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:113:5
   113|   | { -current: T | null, ... }
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:42:35

Cannot create `UnionRef` element because in property `ref`: [incompatible-type]
 - Either `React.RefObject` [1] is incompatible with function type [2]. Non-callable objects are not compatible with
   functions.
 - Or `React.RefObject` [1] is incompatible with null [3].

   forwardRef.js:42:35
    42| const _j = <UnionRef foo={3} ref={badUnionRef} />; // Error bad ref
                                          ^^^^^^^^^^^

References:
   <BUILTINS>/react.js:611:8
   611|     ): React$RefObject<T | null>;
               ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:114:6
   114|   | ((T | null) => mixed)
             ^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:115:5
   115|   | null
            ^^^^ [3]



Found 5 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
